// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as submit 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap aq"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Button
</button>
`;

exports[`should render as submit 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: none
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-left: 0px
}

.n {
  border-right: 0px
}

.o {
  border-top: 0px
}

.p {
  border-color: #2869a2
}

.q {
  color: #fff
}

.r {
  cursor: pointer
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: inherit
}

.ae {
  padding-bottom: 0.53em
}

.af {
  padding-left: 1em
}

.ag {
  padding-right: 1em
}

.ah {
  padding-top: 0.6em
}

.ai {
  pointer-events: auto
}

.aj {
  position: relative
}

.ak {
  border-radius: 2px
}

.al {
  text-align: center
}

.am {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.an {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ao {
  float: none
}

.ap {
  max-width: initial
}

.aq {
  width: auto
}
"
`;

exports[`should render with loading 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb bc bd"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.a:hover {
  background-color: #ededed
}

.b:hover {
  border-color: #dbdbdb
}

.c:hover {
  color: #ededed
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #dbdbdb
}

.f:active {
  color: #fff
}

.g:focus {
  color: #ededed
}

.h:focus {
  outline: none
}

.i:focus {
  border-color: #dbdbdb
}

.j::before {
  content: \\"…\\"
}

.k::before {
  color: black
}

.l::before {
  display: block
}

.m::before {
  position: absolute
}

.n::before {
  top: 0.6em
}

.o::before {
  left: 0px
}

.p::before {
  height: 100%
}

.q::before {
  width: 100%
}

.r::before {
  opacity: 1
}

.s::before {
  animation-name: k1
}

.t::before {
  animation-duration: 1s;
  -webkit-animation-duration: 1s
}

.u::before {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.v::before {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.w[title] {
  pointer-events: none
}

.x {
  background-color: #ededed
}

.y {
  border-bottom: 1px solid
}

.z {
  border-left: 0px
}

.ab {
  border-right: 0px
}

.ac {
  border-top: 0px
}

.ae {
  border-color: #dbdbdb
}

.af {
  color: #ededed
}

.ag {
  cursor: default
}

.ah {
  display: inline-block
}

.ai {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.aj {
  font-size: 0.9333333333333333rem
}

.ak {
  font-weight: 400
}

.al {
  line-height: 1.2
}

.am {
  margin-bottom: 0px
}

.an {
  margin-right: 0px
}

.ao {
  margin-top: 0px
}

.ap {
  margin-left: 0px
}

.aq {
  opacity: 0.8
}

.ar {
  padding-bottom: 0.53em
}

.as {
  padding-left: 1em
}

.at {
  padding-right: 1em
}

.au {
  padding-top: 0.6em
}

.av {
  pointer-events: auto
}

.aw {
  position: relative
}

.ax {
  border-radius: 2px
}

.ay {
  text-align: center
}

.az {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ba {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.bb {
  float: none
}

.bc {
  max-width: initial
}

.bd {
  width: auto
}
"
`;

exports[`should render with loading and disabled overridden 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb bc bd"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading and disabled overridden 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.a:hover {
  background-color: #ededed
}

.b:hover {
  border-color: #dbdbdb
}

.c:hover {
  color: #ededed
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #dbdbdb
}

.f:active {
  color: #fff
}

.g:focus {
  color: #ededed
}

.h:focus {
  outline: none
}

.i:focus {
  border-color: #dbdbdb
}

.j::before {
  content: \\"…\\"
}

.k::before {
  color: black
}

.l::before {
  display: block
}

.m::before {
  position: absolute
}

.n::before {
  top: 0.6em
}

.o::before {
  left: 0px
}

.p::before {
  height: 100%
}

.q::before {
  width: 100%
}

.r::before {
  opacity: 1
}

.s::before {
  animation-name: k1
}

.t::before {
  animation-duration: 1s;
  -webkit-animation-duration: 1s
}

.u::before {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.v::before {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.w[title] {
  pointer-events: none
}

.x {
  background-color: #ededed
}

.y {
  border-bottom: 1px solid
}

.z {
  border-left: 0px
}

.ab {
  border-right: 0px
}

.ac {
  border-top: 0px
}

.ae {
  border-color: #dbdbdb
}

.af {
  color: #ededed
}

.ag {
  cursor: default
}

.ah {
  display: inline-block
}

.ai {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.aj {
  font-size: 0.9333333333333333rem
}

.ak {
  font-weight: 400
}

.al {
  line-height: 1.2
}

.am {
  margin-bottom: 0px
}

.an {
  margin-right: 0px
}

.ao {
  margin-top: 0px
}

.ap {
  margin-left: 0px
}

.aq {
  opacity: 0.8
}

.ar {
  padding-bottom: 0.53em
}

.as {
  padding-left: 1em
}

.at {
  padding-right: 1em
}

.au {
  padding-top: 0.6em
}

.av {
  pointer-events: auto
}

.aw {
  position: relative
}

.ax {
  border-radius: 2px
}

.ay {
  text-align: center
}

.az {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ba {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.bb {
  float: none
}

.bc {
  max-width: initial
}

.bd {
  width: auto
}
"
`;

exports[`should render with type 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap aq"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: none
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-left: 0px
}

.n {
  border-right: 0px
}

.o {
  border-top: 0px
}

.p {
  border-color: #2869a2
}

.q {
  color: #fff
}

.r {
  cursor: pointer
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: inherit
}

.ae {
  padding-bottom: 0.53em
}

.af {
  padding-left: 1em
}

.ag {
  padding-right: 1em
}

.ah {
  padding-top: 0.6em
}

.ai {
  pointer-events: auto
}

.aj {
  position: relative
}

.ak {
  border-radius: 2px
}

.al {
  text-align: center
}

.am {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.an {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ao {
  float: none
}

.ap {
  max-width: initial
}

.aq {
  width: auto
}
"
`;

exports[`should render with type/disabled 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap aq"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type/disabled 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: auto
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-left: 0px
}

.n {
  border-right: 0px
}

.o {
  border-top: 0px
}

.p {
  border-color: #2869a2
}

.q {
  color: #fff
}

.r {
  cursor: default
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: 0.5
}

.ae {
  padding-bottom: 0.53em
}

.af {
  padding-left: 1em
}

.ag {
  padding-right: 1em
}

.ah {
  padding-top: 0.6em
}

.ai {
  pointer-events: none
}

.aj {
  position: relative
}

.ak {
  border-radius: 2px
}

.al {
  text-align: center
}

.am {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.an {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ao {
  float: none
}

.ap {
  max-width: initial
}

.aq {
  width: auto
}
"
`;
